@@ -20,11 +20,7 @@
  */
 package org.jumpmind.util;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.LinkedList;
 
 import org.apache.commons.lang.StringUtils;
 import org.apache.log4j.AppenderSkeleton;
@@ -32,7 +28,7 @@ import org.apache.log4j.spi.LoggingEvent;
 
 public class BufferedLogAppender extends AppenderSkeleton {
 
-    protected Map<String, List<LoggingEvent>> events = Collections.synchronizedMap(new LinkedHashMap<String,List<LoggingEvent>>());
+    protected LinkedList<LoggingEvent> events = new LinkedList<LoggingEvent>();
 
     protected int size = 100;
 
@@ -40,27 +36,20 @@ public class BufferedLogAppender extends AppenderSkeleton {
 
     @Override
     protected void append(LoggingEvent event) {
-        Object mdc = event.getMDC("engineName");
-        boolean addEvent = mdc != null;
-        if (addEvent && filterText != null) {
+        boolean addEvent = true;
+        if (filterText != null) {
             String message = (String) event.getMessage();
             addEvent = message.contains(filterText);
             addEvent |= event.getLoggerName().contains(filterText);
+            Object mdc = event.getMDC("engineName");
             if (mdc != null) {
                 addEvent |= mdc.toString().contains(filterText);
             }
         }
         if (addEvent) {
-            String engineName = mdc.toString();
-            List<LoggingEvent> list = events.get(engineName);
-            if (list == null) {
-                list = Collections.synchronizedList(new ArrayList<LoggingEvent>(size));
-                events.put(engineName, list);
-            }
-            
-            list.add(event);
-            if (list.size() > size) {
-                list.remove(0);
+            events.addLast(event);
+            if (events.size() > size) {
+                events.removeFirst();
             }
         }
     }
@@ -95,7 +84,7 @@ public class BufferedLogAppender extends AppenderSkeleton {
         return filterText;
     }
 
-    public List<LoggingEvent> getEvents(String engineName) {
-        return events.get(engineName);
+    public LinkedList<LoggingEvent> getEvents() {
+        return events;
     }
 }
